MBS-8268: Fix an issue with rating stars display
Before commit 9ca6bafa879473a23d7bb205fa9ccb01f0a4cc40, which
inadvertently removed the properties "background-repeat: repeat-x" and
"background-position: left -1000px" from elements of the rating
control, rating links were transparent unless the mouse hovered above
them. With that change, they became grey when having focus, such as
after a mouse click, partially covering the current rating and the
other rating links; in many cases, it appeared to the user as if
clicking had not had any effect. The regular display was restored only
when the user clicked elsewhere, thereby removing the focus from the
rating link.

While the old CSS before the commit mentioned above did not show these
issues for mouse users, it did not work very well for keyboard users
who tabbed to a rating link: because the link stayed transparent when
having focus, there was no indication to the user about their current
position. Hover styling is never invoked for keyboard users.

Due to this difference, it doesn't appear to be possible to have CSS
styling that works well for both user groups. Therefore, the following
two steps are implemented:
1. The stars are shown green when a rating link has focus, i.e. the
   same colour used for hover. This provides keyboard users with the
   same visual indication as mouse users before clicking, but causes
   the stars to remain green after a click even when the mouse pointer
   has been moved elsewhere.
2. To remedy this, focus is removed from the rating link after its
   activation, via JavaScript. It is instead moved to the container,
   i.e. in the tab order immediately before the rating links.

--- a/root/static/styles/widgets.less
+++ b/root/static/styles/widgets.less
@@ -152,7 +152,6 @@ div.buttons, span.buttons { display: inline-block; }
         top:0;
         left:0;
         text-indent:-1000em;
-        outline:none;
         overflow:hidden;
         border: none;
     }
@@ -164,9 +163,9 @@ div.buttons, span.buttons { display: inline-block; }
     .current-user-rating,
     .current-rating {
         background-image: data-uri('../images/icons/rating_star_small.gif');
+        background-position: 0px 0px;   // grey star
+        outline: none;
     }
-
-    background-position: 0px 0px;       // grey star
 
     .current-rating {
         background-position: 0px -30px; // blue star
@@ -174,6 +173,8 @@ div.buttons, span.buttons { display: inline-block; }
     .current-user-rating {
         background-position: 0px -10px; // yellow star
     }
+    a:active,
+    a:focus,
     a:hover {
         background-position: 0px -20px; // green star
     }
